--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -3,18 +3,145 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-<!--        <variable-->
-<!--            name="viewModel"-->
-<!--            type="com.first.release.examnotes.activities.InsertEventViewModel" />-->
-<!--        <variable-->
-<!--            name="handlers"-->
-<!--            type="com.first.release.examnotes.activities.InsertEventHandlers" />-->
+        <variable
+            name="viewModel"
+            type="com.first.release.examnotes.activities.InsertViewModel" />
+        <variable
+            name="handlers"
+            type="com.first.release.examnotes.activities.InsertEventHandlers" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:id="@+id/text_field_string"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.textFieldStringVisibility}">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:textSize="22dp"
+                android:fontFamily="@font/noto_serif_jp_black"
+                android:text="@{viewModel.textFieldStringLabel}"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="@={viewModel.textFieldString}" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/text_field_int"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.textFieldIntVisibility}">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:textSize="22dp"
+                android:fontFamily="@font/noto_serif_jp_black"
+                android:text="@{viewModel.textFieldIntLabel}"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:inputType="number"
+                    android:text="@={viewModel.textFieldInt}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:text="@{viewModel.symbol}"
+                    android:visibility="@{viewModel.symbolVisibility}" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/radio_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.radioGroupVisibility}">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/insert_activity_radio_single"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="20dp"
+                    android:textSize="22dp"
+                    android:text="@string/insert_radio_button_single"
+                    android:onClick="@{handlers::onClickRadioButton}"/>
+
+                <RadioButton
+                    android:id="@+id/insert_activity_radio_insert"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="20dp"
+                    android:textSize="22dp"
+                    android:text="@string/insert_radio_button_insert"
+                    android:onClick="@{handlers::onClickRadioButton}"/>
+
+                <RadioButton
+                    android:id="@+id/insert_activity_radio_multiple"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layoutDirection="rtl"
+                    android:textAlignment="textStart"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="20dp"
+                    android:textSize="22dp"
+                    android:text="@string/insert_radio_button_multiple"
+                    android:onClick="@{handlers::onClickRadioButton}"/>
+            </RadioGroup>
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:onClick="@{handlers::onClickDecision}"
+            android:text="@string/insert_decision_link"
+            android:textColor="@color/blue" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:onClick="@{handlers::onClickCancel}"
+            android:text="@string/cancel"
+            android:textColor="@color/blue" />
     </LinearLayout>
 </layout>
