--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#D9D9D9</color>
     <color name="blue">#0000FF</color>
+    <color name="sky_blue">#0B84F4</color>
     <color name="red">#FF0000</color>
 </resources>
